<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.thedisorganizeddesk.sunshine">
    <com.thedisorganizeddesk.sunshine.LocalEditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength= "3"/>
    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units_title"
        android:defaultValue="@string/temperature_units_default"
        android:entries="@array/temperature_units"
        android:entryValues="@array/temperature_unit_values"/>
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
</PreferenceScreen>