<!-- Master layout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white" />

    <include layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>

    <android.support.v7.widget.GridLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/detail_accent_pane_background"
        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        >

        <android.support.v7.widget.Space
            app:layout_columnSpan="2"
            app:layout_rowWeight="1"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/detail_humidity_label_textview"
            android:fontFamily="sans-serif"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:text="@string/humidity"
            android:textColor="@color/detail_accent_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
            />

        <TextView
            android:id="@+id/detail_humidity_textview"
            android:fontFamily="sans-serif"
            app:layout_gravity="fill_horizontal"
            tools:text="38%"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />

        <TextView
            android:id="@+id/detail_pressure_label_textview"
            android:fontFamily="sans-serif"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:text="@string/pressure"
            android:textColor="@color/detail_accent_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingTop="@dimen/detail_view_extra_padding"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
            />


        <TextView
            android:id="@+id/detail_pressure_textview"
            android:fontFamily="sans-serif"
            app:layout_gravity="fill_horizontal"
            tools:text="995 hPa"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />

        <TextView
            android:id="@+id/detail_wind_label_textview"
            android:fontFamily="sans-serif"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:text="@string/wind"
            android:textColor="@color/detail_accent_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingTop="@dimen/detail_view_extra_padding"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            />

        <TextView
            android:id="@+id/detail_wind_textview"
            android:fontFamily="sans-serif"
            app:layout_gravity="fill_horizontal"
            tools:text="4km/h NW"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />

        <android.support.v7.widget.Space
            app:layout_columnSpan="2"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>
    <ImageSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageSwitcher"
        android:layout_gravity="right" />
</LinearLayout>